--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<head>
+  <title><%= title %></title>
+  <style>
+    /* CSS styles for the menu header */
+    body {
+      margin: 0;
+      padding: 0;
+    }
+    .menu {
+      background-color: #f5f5f5;
+      padding: 10px;
+    }
+    .menu ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+    }
+    .menu li {
+      margin-right: 10px;
+    }
+    .menu a {
+      text-decoration: none;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+  <div class="menu">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
+    </ul>
+  </div>
+  <h1>Welcome to the <%= title %>!</h1>
+  <p>Explore the wonderful world of peppers.</p>
+</body>
 </html>
